--- a/assets/style.css
+++ b/assets/style.css
@@ -39,18 +39,21 @@ main {
     /* margin: 10px 20px 10px 20px; */
 }
 
-/* .card h2 {
+.card h2 {
     border-style: dotted;
     border-color: var(--border-color);
     width: 60%;
     margin-right: 20%;
     margin-left: 20%;
     text-align: center;
-} */
+}
 
-/* .card p {
-    
-} */
+.card p {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 12px;
+    text-align: center;
+}
 
 .card code pre {
     line-height: 24px;
