--- a/assets/style.css
+++ b/assets/style.css
@@ -49,15 +49,18 @@ main {
     text-align: center;
 }
 
-.card code pre {
+.card pre {
     line-height: 24px;
     font-size:medium;
+    margin-left: 10%;
+    user-select: all;
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
 
 
 @media screen and (min-width: 768px) {
