--- a/assets/style.css
+++ b/assets/style.css
@@ -40,18 +40,35 @@ main {
     margin-right: 20%;
     margin-left: 20%;
     text-align: center;
+    transition: box-shadow 2s;
+}
+
+h2:hover{
+ box-shadow: 0px 0px 30px 10px var(--secondary-color);
 }
 
 .card p {
     margin-left: 10%;
     margin-right: 10%;
-    font-size: 12px;
+    font-size: medium;
     text-align: center;
+}
+
+.card span {
+    line-height: 24px;
+    font-size:small;
+    margin-left: 10%;
+    user-select: all;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 .card pre {
     line-height: 24px;
-    font-size:medium;
+    font-size:small;
     margin-left: 10%;
     user-select: all;
     white-space: pre-wrap;       /* css-3 */
